tool/src/c/snapshots/diplomat_tool__c__structs__tests__method_taking_slice@MyStruct.h.snap
---
source: tool/src/c/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif

typedef struct MyStruct MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

MyStruct* MyStruct_new_slice(const double* v_data, size_t v_len);

void MyStruct_fill_slice(double* v_data, size_t v_len);

void MyStruct_set_slice(MyStruct* self, const double* new_slice_data, size_t new_slice_len);
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif
#endif

