tool/src/c/snapshots/diplomat_tool__c__structs__tests__simple_opaque_struct@MyStruct.h.snap
---
source: tool/src/c/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"
#include "MyStruct_type.h"
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

MyStruct* MyStruct_new(uint8_t a, uint8_t b);

uint8_t MyStruct_get_a(const MyStruct* self);

void MyStruct_set_b(MyStruct* self, uint8_t b);
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_H

